192008-06-17  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - fix https://bugs.webkit.org/show_bug.cgi?id=19598
          Crash in WebCore::RenderBlock::determineStartPosition

        Test: fast/dynamic/floating-to-positioned-2.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::setStyle): Changed to also remove relatively
        positioned floats from object lists when they become positioned, because
        then they cease to be floating.

2008-06-18  Darin Adler  <darin@apple.com>

        Reviewed by Mark Rowe.

        - fix storage leak

        * css/CSSMutableStyleDeclaration.cpp:
        (WebCore::CSSMutableStyleDeclaration::copy): Added an adoptRef that
        I missed when changing these objects to start with a refcount of 1.

2008-06-18  Timothy Hatcher  <timothy@apple.com>

        Add a script build phase to remove the WebKit.qrc file from
        WebCore's resources. This file is used for the Qt port, but we
        copy the whole inspector folder for connivence and get this file.

        Reviewed by Adam Roben.

        * WebCore.xcodeproj/project.pbxproj: New script phase.

2008-06-18  Timothy Hatcher  <timothy@apple.com>

        Combine the Web Inspector's JavaScript resources into one large
        script file to speed up loading of the Inspector. This is only
        done for Release and Production builds.

        Reviewed by Adam Roben.

        * WebCore.xcodeproj/project.pbxproj: Added a Streamline Inspector Source
        script build phase that calls combine-javascript-resources and
        moves files around in the build directory.
        * combine-javascript-resources: Added.

2008-06-18  Rob Buis  <buis@kde.org>

        Reviewed by Darin.

        https://bugs.webkit.org/show_bug.cgi?id=18786
        Once rendered, SVG text elements removed from DOM continue to be displayed

        Repaint the text visual rect before removing it.

        * rendering/RenderSVGInlineText.cpp: